objects/APTS_ABB_Dimension_Value__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Dimension__c</fullName>
        <label>Dimension</label>
        <referenceTo>APTS_ABB_Dimension__c</referenceTo>
        <relationshipLabel>ABB Dimension Values</relationshipLabel>
        <relationshipName>ABB_Dimension_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Formula_Type__c</fullName>
        <label>Formula Type</label>
        <picklist>
            <picklistValues>
                <fullName>in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not in</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Range_End_Value__c</fullName>
        <label>Range : End Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <formula>TEXT(APTS_Dimension__r.APTS_Type__c)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ABB Dimension Value</label>
    <nameField>
        <displayFormat>ADV-{00000}</displayFormat>
        <label>ABB Dimension Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABB Dimension Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>